cabal-version:       2.2
name:                tree-sitter-php
version:             0.2.0.1
synopsis:            Tree-sitter grammar/parser for PHP
description:         This package provides a parser for PHP suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-php#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Tree-sitter, PHP
build-type:          Simple

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:     TreeSitter.PHP
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       >= 0.3 && < 1
                     , template-haskell  >= 2.12 && < 2.16
                     , tree-sitter-php-internal

library tree-sitter-php-internal
  import: common
  exposed-modules:     TreeSitter.PHP.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  include-dirs:        vendor/tree-sitter-php/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-php/src/parser.c
                     , vendor/tree-sitter-php/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
