package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_test",
)

haskell_library(
    name = "tree-sitter-python",
    srcs = glob(["TreeSitter/**/*.hs"]),
    compiler_flags = ["-DBAZEL_BUILD=1"],
    deps = [
        "//:base",
        "//tree-sitter",
    ],
)

filegroup(
    name = "corpus",
    srcs = glob([
        "**/corpus/*.txt",
        "vendor/tree-sitter-python/src/node-types.json",
    ]),
    visibility = ["//visibility:public"],
)
