cabal-version:       2.2
name:                tree-sitter-python
version:             0.4.0.0
synopsis:            Tree-sitter grammar/parser for Python
description:         This package provides a parser for Python suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-python#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Tree-sitter, Python
build-type:          Simple
data-files:          vendor/tree-sitter-python/src/node-types.json
extra-source-files:  ChangeLog.md

library
  exposed-modules:     TreeSitter.Python
                     , TreeSitter.Python.AST
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       == 0.3.0.0
                     , aeson            ^>= 1.4.2.0
                     , directory        ^>= 1.3
                     , filepath         ^>= 1.4
                     , template-haskell  >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-python-internal
  default-language:    Haskell2010
  ghc-options:         -Weverything -Wno-missing-local-signatures -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-export-lists
  if (impl(ghc >= 8.6))
    ghc-options:       -Wno-star-is-type

library tree-sitter-python-internal
  exposed-modules:     TreeSitter.Python.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-python/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-python/src/parser.c
                     , vendor/tree-sitter-python/src/scanner.cc
  extra-libraries:     stdc++
  ghc-options:         -Weverything -Wno-missing-local-signatures -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-export-lists
  if (impl(ghc >= 8.6))
    ghc-options:       -Wno-star-is-type

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base
                  , tree-sitter
                  , tree-sitter-python
                  , bytestring           ^>= 0.10.8.2
                  , hedgehog >= 0.6 && <2

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
