cabal-version:       2.2
name:                tree-sitter-python
version:             0.6.0.0
synopsis:            Tree-sitter grammar/parser for Python
description:         This package provides a parser for Python suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-python
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Tree-sitter, Python
build-type:          Simple
data-files:          vendor/tree-sitter-python/src/node-types.json
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:     TreeSitter.Python
                     , TreeSitter.Python.AST
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter      ^>= 0.5
                     , aeson            ^>= 1.4.2.0
                     , directory        ^>= 1.3
                     , filepath         ^>= 1.4
                     , semantic-source  ^>= 0
                     , template-haskell  >= 2.12 && < 2.16
                     , tree-sitter-python-internal

library tree-sitter-python-internal
  import: common
  exposed-modules:     TreeSitter.Python.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-python/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-python/src/parser.c
                     , vendor/tree-sitter-python/src/scanner.cc
  extra-libraries:     stdc++

test-suite test
  import: common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base
                  , tree-sitter
                  , tree-sitter-python
                  , bytestring           ^>= 0.10.8.2
                  , hedgehog >= 0.6 && <2

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
