cabal-version:       2.4
name:                tree-sitter-python
version:             0.9.0.4
synopsis:            Tree-sitter grammar/parser for Python
description:         This package provides a parser for Python suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-python
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2019 GitHub
category:            Tree-sitter, Python
build-type:          Simple
data-files:          vendor/tree-sitter-python/src/node-types.json
                   , vendor/tree-sitter-python/test/corpus/*.txt
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

library
  import: common
  exposed-modules:     TreeSitter.Python
  autogen-modules:     Paths_tree_sitter_python
  other-modules:       Paths_tree_sitter_python
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-python/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-python/src/parser.c
                     , vendor/tree-sitter-python/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
