cabal-version:       2.2
name:                tree-sitter-ruby
version:             0.2.0.0
synopsis:            Tree-sitter grammar/parser for Ruby
description:         This package provides a parser for Ruby suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-ruby#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Tree-sitter, Ruby
build-type:          Simple

library
  exposed-modules:     TreeSitter.Ruby
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       == 0.3.0.0
                     , template-haskell  >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-ruby-internal
  default-language:    Haskell2010

library tree-sitter-ruby-internal
  exposed-modules:     TreeSitter.Ruby.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-ruby/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-ruby/src/parser.c
                     , vendor/tree-sitter-ruby/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
