cabal-version:       2.2
name:                tree-sitter-scala
version:             0.1.0.0
synopsis:            Tree-sitter grammar/parser for Scala
description:         This package provides a parser for Scala suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-scala
author:              lemastero
maintainer:          piotrparadzinski@gmail.com
copyright:           2020 GitHub
category:            Tree-sitter, Scala
build-type:          Simple
data-files:          vendor/tree-sitter-scala/src/node-types.json
                   , vendor/tree-sitter-scala/corpus/*.txt
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: common
  exposed-modules:     TreeSitter.Scala
  autogen-modules:     Paths_tree_sitter_scala
  other-modules:       Paths_tree_sitter_scala
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-scala/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-scala/src/parser.c
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
