cabal-version:       2.4
name:                tree-sitter-test-helpers
version:             0.1.0.0
synopsis:            Test helpers for haskell-tree-sitter
description:         Test helpers for haskell-tree-sitter language bindings.
homepage:            http://github.com/tree-sitter/haskell-tree-sitter#readme
license:             BSD-3-Clause
author:              Rob Rix, Josh Vera, Tim Clem, Rick Winfrey, Max Brunsfeld, Ayman Nadeem, Patrick Thomson
maintainer:          rob.rix@github.com
copyright:           2019 GitHub
category:            Parsing, Tree-sitter
build-type:          Simple

tested-with:
  GHC == 8.6.5
  GHC == 8.8.1

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs:     src
  exposed-modules:    TreeSitter.Test.Helpers
  build-depends:      base >= 4.12 && < 5
                    , bytestring ^>= 0.10.8.2
                    , hedgehog >= 0.6 && <2
                    , pathtype ^>= 0.8.1
                    , attoparsec
                    , text
                    , tasty
                    , tasty-hedgehog
                    , tasty-hunit
