cabal-version:       2.2
name:                tree-sitter-tsx
version:             0.3.0.0
synopsis:            Tree-sitter grammar/parser for TSX
description:         This package provides a parser for TSX (TypeScript + XML) suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-tsx
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Tree-sitter, TypeScript
build-type:          Simple

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:     TreeSitter.TSX
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       >= 0.3 && < 1
                     , template-haskell  >= 2.12 && < 2.16
                     , tree-sitter-tsx-internal

library tree-sitter-tsx-internal
  import: common
  exposed-modules:     TreeSitter.TSX.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-typescript/tsx/src
                       vendor/tree-sitter-typescript/common
  install-includes:    tree_sitter/parser.h
                       scanner.h
  c-sources:           vendor/tree-sitter-typescript/tsx/src/parser.c
                     , vendor/tree-sitter-typescript/tsx/src/scanner.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
