cabal-version:       2.4
name:                tree-sitter-typescript
version:             0.4.1.0
synopsis:            Tree-sitter grammar/parser for TypeScript
description:         This package provides a parser for TypeScript suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-typescript
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2019 GitHub
category:            Tree-sitter, TypeScript
build-type:          Simple
data-files:          vendor/tree-sitter-typescript/typescript/src/node-types.json

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:     TreeSitter.TypeScript
                     , TreeSitter.TypeScript.AST
  build-depends:       base              >= 4.12 && < 5
                     , semantic-source  ^>= 0
                     , template-haskell  >= 2.12 && < 2.16
                     , tree-sitter      ^>= 0.8
                     , tree-sitter-typescript-internal

library tree-sitter-typescript-internal
  import: common
  exposed-modules:     TreeSitter.TypeScript.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  include-dirs:        vendor/tree-sitter-typescript/typescript/src
                       vendor/tree-sitter-typescript/common
  install-includes:    tree_sitter/parser.h
                       scanner.h
  c-sources:           vendor/tree-sitter-typescript/typescript/src/parser.c
                     , vendor/tree-sitter-typescript/typescript/src/scanner.c

test-suite test
  import: common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    base
                  , tree-sitter
                  , tree-sitter-typescript
                  , tree-sitter-test-helpers
                  , bytestring ^>= 0.10.8.2
                  , hedgehog >= 0.6 && <2
                  , pathtype ^>= 0.8.1
                  , text
                  , tasty
                  , tasty-hedgehog
                  , tasty-hunit

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
