cabal-version:       2.4
name:                tree-sitter-typescript
version:             0.4.2.0
synopsis:            Tree-sitter grammar/parser for TypeScript
description:         This package provides a parser for TypeScript suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-typescript
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2019 GitHub
category:            Tree-sitter, TypeScript
build-type:          Simple
data-files:          vendor/tree-sitter-typescript/typescript/src/node-types.json

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:     TreeSitter.TypeScript
  autogen-modules:     Paths_tree_sitter_typescript
  other-modules:       Paths_tree_sitter_typescript
  build-depends:       base >= 4.5 && < 4.7
                     , tree-sitter
  include-dirs:        vendor/tree-sitter-typescript/typescript/src
                       vendor/tree-sitter-typescript/common
  install-includes:    tree_sitter/parser.h
                       scanner.h
  c-sources:           vendor/tree-sitter-typescript/typescript/src/parser.c
                     , vendor/tree-sitter-typescript/typescript/src/scanner.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
