name:                tree-sitter
version:             0.1.0
synopsis:            haskell tree-sitter bindings
description:         Unstable bindings for the tree-sitter parsing library.
homepage:            http://github.com/tree-sitter/haskell-tree-sitter#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix, Josh Vera, Tim Clem, Rick Winfrey, Max Brunsfeld, Ayman Nadeem, Patrick Thomson
maintainer:          rob.rix@github.com
copyright:           2015 GitHub
category:            Parsing, Tree-sitter
build-type:          Custom
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base                  >= 4.7 && < 5
                     , aeson                ^>= 1.4.2
                     , bytestring           ^>= 0.10.8.2
                     , directory            ^>= 1.3
                     , filepath             ^>= 1.4.1
                     , fused-effects         >= 0.4 && <1
                     , hedgehog              >= 0.6 && <2
                     , split                ^>= 0.2.3
                     , template-haskell      >= 2.12.0.0 && < 2.15.0.0
                     , text                 ^>= 1.2.3.1
                     , unordered-containers ^>= 0.2.9
  default-language:    Haskell2010
  exposed-modules:     TreeSitter.Parser
                     , TreeSitter.Importing
                     , TreeSitter.Language
                     , TreeSitter.Node
                     , TreeSitter.Tree
                     , CodeGen.GenerateSyntax
                     , CodeGen.Deserialize
                     , TreeSitter.Ptr
                     , TreeSitter.Cursor
  Include-dirs:        vendor/tree-sitter/lib/include
                     , vendor/tree-sitter/lib/src
                     , vendor/tree-sitter/lib/utf8proc
  c-sources:           src/bridge.c
                     , vendor/tree-sitter/lib/src/lib.c
  cc-options:          -std=c99 -Os
  ghc-options:         -Wall -fno-warn-name-shadowing -O -j

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tree-sitter
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter

custom-setup
  setup-depends:  base >= 4.8 && < 5
                , Cabal
                , directory
                , process
